# platform.core.uifw.isf

./: .gitignore  99-input.rules  CMakeLists.txt  Makefile.am  NOTICE  README  bootstrap  configure.ac  configure.ac.orig  ise-default.xml  isf.manifest  isf.pc.in  isf.rule  org.tizen.isf-kbd-mode-changer.xml  project.config  releasenote.txt  scim-tv.service  scim.service  ug-isfsetting-efl.xml  ug.isfsetting-efl.include
debian/: changelog  control  docs  libisf-bin.install  libisf-bin.postinst  libisf-dev.install  rules
ism/configs/: Makefile.am  config  config.1  global
ism/data/: Makefile.am  isf-panel-efl  isf-panel-efl.desktop  isf.sh
ism/data/icons/: Makefile.am
ism/data/pixmaps/: Makefile.am  isf_candidate.edc  isf_candidate_theme1.edc  isf_candidate_theme2.edc  isf_minicontrol.edc  isfsetting.edc
ism/data/remote-input/: Makefile.am  air.htm  airinput.htm  airsetting.htm  ajaxCaller.js  avahi.htm  custom3.css  game_mode.htm  index.htm  ise-default.help  ise-wifi-keyboard.help  jquery.mobile-1.3.1.css  jquery.mobile-1.3.1.min.css  key_mode.htm  mouse.htm  openinput.js  remote_input.css  remote_input.js  remote_input_game.css  test.htm  testpage.htm  tv.htm  tv2.htm  tv_mode.htm  tv_mode.js  util.js  web-helper-client.js
ism/demos/: Makefile.am  isf_autocapital_efl.cpp  isf_demo_efl.cpp  isf_entry_event_efl.cpp  isf_event_efl.cpp  isf_focus_movement_efl.cpp  isf_imcontrol_efl.cpp  isf_imdata_set_efl.cpp  isf_input_hint_efl.cpp  isf_language_efl.cpp  isf_layout_efl.cpp  isf_ondemand_efl.cpp  isf_password_mode_efl.cpp  isf_prediction_efl.cpp  isf_return_key_disable_efl.cpp  isf_return_key_type_efl.cpp
ism/dump/: isf_log_dump.sh
ism/extras/: Makefile.am
ism/extras/efl_immodule/: Makefile.am  isf_imf_context.cpp  isf_imf_context.h  isf_imf_control.cpp  isf_imf_control.h  isf_imf_control_ui.cpp  isf_imf_control_ui.h  isf_imf_module.cpp
ism/extras/efl_panel/: Makefile.am  MotionDataType.h  center_popup.cpp  center_popup.h  iseselector.cpp  iseselector.h  isf_panel_efl.cpp  isf_panel_efl.h  isf_panel_utility.cpp  isf_panel_utility.h  minicontrol.cpp  minicontrol.h  motion_input.cpp  motion_input.h  remote_input.cpp  remote_input.h  websocketserver.cpp  websocketserver.h
ism/extras/efl_setting/: Makefile.am  isf_setting_efl.cpp  isf_setting_wizard.cpp  scim_setup_module_efl.cpp
ism/extras/efl_setting/include/: isf_setting_efl.h  isf_setting_wizard.h  scim_setup_module_efl.h
ism/extras/efl_wsc/: Makefile.am  input-method-client-protocol.h  input-method-protocol.c  isf_wsc_context.cpp  isf_wsc_context.h  isf_wsc_control.cpp  isf_wsc_control.h  isf_wsc_control_ui.cpp  isf_wsc_control_ui.h  isf_wsc_efl.cpp  text-client-protocol.h
ism/extras/efl_wsm/: Makefile.am  isf_wsm_efl.cpp  isf_wsm_query_utility.cpp  isf_wsm_query_utility.h  isf_wsm_utility.cpp  isf_wsm_utility.h
ism/extras/gtk_panel/: Makefile.am  isf_help_win.cpp  isf_help_win.h  isf_ise_setup_win.cpp  isf_ise_setup_win.h  isf_lang_win.cpp  isf_lang_win.h  isf_setup_utility.cpp  isf_setup_utility.h  isf_setup_win.cpp  isf_setup_win.h  scim_panel_gtk.cpp  scim_setup_module.cpp  scim_setup_module.h
ism/extras/kbd_mode_changer/: Makefile.am  main.cpp
ism/extras/kbd_mode_changer/include/: main.h
ism/extras/wayland_immodule/: Makefile.am  wayland_imcontext.c  wayland_imcontext.h  wayland_module.c
ism/modules/: Makefile.am
ism/modules/panelagent/ecoresocket/: Makefile.am  ecore_socket_panel_agent_module.cpp  ecoresocket.version-script
ism/modules/panelagent/wayland/: Makefile.am  isf_wsc_context.h  isf_wsc_control.cpp  isf_wsc_control.h  isf_wsc_control_ui.cpp  isf_wsc_control_ui.h  wayland_panel_agent_module.cpp
ism/src/: Makefile.am  SLP_ISF_PG.h  TIZEN_ISF_PG.h  ise_context.h  ise_preexec.cpp  ise_preexec.h  isf_control.cpp  isf_control.h  isf_debug.h  isf_imcontrol_client.cpp  isf_imcontrol_client.h  isf_info_manager.cpp  isf_info_manager.h  isf_log.cpp  isf_message_queue.h  isf_panel_agent_base.cpp  isf_panel_agent_base.h  isf_panel_agent_manager.cpp  isf_panel_agent_manager.h  isf_panel_agent_module.cpp  isf_panel_agent_module.h  isf_pkg.cpp  isf_pkg.h  isf_query_engines.cpp  isf_query_utility.cpp  isf_query_utility.h  isf_remote_client.cpp  isf_remote_client.h  isf_remote_control.cpp  isf_remote_control.h  ltdl.cpp  privilege_checker.cpp  privilege_checker.h  scim.cpp  scim.h  scim_attribute.h  scim_backend.cpp  scim_backend.h  scim_compose_key.cpp  scim_compose_key.h  (+65 more)
ism/utils/: Makefile.am  scim_x11_utils.cpp  scim_x11_utils.h
packaging/: ise-default.spec  isf-panel.service  isf.changes  isf.spec  scim.service
po/: CMakeLists.txt  Makefile.in.in  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  (+53 more)
po/isfsetting_efl/: Makefile.in.in  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_GB.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  isfsetting-efl.pot  it.po  it_IT.po  ja.po  ja_JP.po  ka.po  kk.po  ko.po  (+27 more)
po/kbwizard_efl/: Makefile.in.in  POTFILES.in  bg.po  cs.po  de.po  de_DE.po  el_GR.po  en.po  en_GB.po  en_US.po  es_ES.po  es_MX.po  fi.po  fr.po  fr_FR.po  it.po  it_IT.po  ja.po  ja_JP.po  keyboard-setting-wizard-efl.pot  ko.po  ko_KR.po  nl.po  nl_NL.po  pa.po  pt_PT.po  ru_RU.po  sr.po  sv.po  th.po  tr_TR.po  update-po.sh  zh_CN.po  zh_HK.po  zh_TW.po
po/scim/: POTFILES.in  ar.po  az.po  be_BY.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_GB.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  (+40 more)
src/: common.cpp  config.cpp  imdata.cpp  ise-emoticon-list.cpp  ise-emoticon-mode.cpp  ise.cpp  languages.cpp  main.cpp  option.cpp  setup_module.cpp
(+453 files in other folders)
