## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002 James Su
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

MAINTAINERCLEANFILES	= Makefile.in
CLEANFILES		= *.bak

SUBDIRS			= icons pixmaps

isfshelldir    = /etc/profile.d/
isfshell_DATA  = isf.sh

webdir = /usr/share/scim/remote-input
web_DATA =  remote-input/air.htm \
            remote-input/airinput.htm \
            remote-input/airsetting.htm \
            remote-input/ajax-loader.gif \
            remote-input/ajaxCaller.js \
            remote-input/custom3.css \
            remote-input/game_mode.htm \
            remote-input/index.htm \
            remote-input/test.htm \
            remote-input/testpage.htm \
            remote-input/avahi.htm \
            remote-input/jquery-2.0.2.min.js \
            remote-input/jquery.mobile-1.3.1.css \
            remote-input/jquery.mobile-1.3.1.min.css \
            remote-input/jquery.mobile-1.3.1.min.js \
            remote-input/jquery.mobile-1.3.1_custom.css \
            remote-input/jquery.mobile.structure-1.3.1.css \
            remote-input/key_mode.htm \
            remote-input/mouse.htm \
            remote-input/remote_input.css \
            remote-input/remote_input_game.css \
            remote-input/remote_input.js \
            remote-input/shortcut_icon.png \
            remote-input/tv.htm \
            remote-input/tv2.htm \
            remote-input/tv_mode.htm \
            remote-input/tv_mode.js \
            remote-input/util.js \
            remote-input/web-helper-client.js

webimgsdir = /usr/share/scim/remote-input/imgs
webimgs_DATA = remote-input/imgs/*
