## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2008 SAMSUNG
##

MAINTAINERCLEANFILES	= Makefile.in
CLEANFILES              = *.bak

SUBDIRS			=

icondir			= @ISF_ICONDIR@
icon_DATA		= @ISE_NAME@.png


helpdir	                = @ISF_MODULEDIR@/Helper
help_DATA               = @ISE_NAME@.help



webdir = /usr/share/scim/remote-input
web_DATA = index.htm\
            ajaxCaller.js\
            util.js\
            mouse.htm\
            key_mode.htm\
            tv_mode.htm\
            tv.htm\
            game_mode.htm\
            icons-18-black.png\
            icons-18-white.png\
            icons-36-black.png\
            icons-36-white.png\
            ise-wifi-keyboard.png\
            jquery.mobile-1.3.1.min.css\
            jquery.mobile-1.3.1.css\
            remote_input.css\
            remote_input_game.css\
            remote_input.js\
            custom3.css\
            jquery.mobile-1.3.1.min.js\
            jquery-2.0.2.min.js\
            tizenbrand.png\
            mouse_pad.png\
            remotekeyboard_03.png\
            remotekeyboard_07.png\
            remotekeyboard_11.png\
            remotekeyboard_12.png\
            remotekeyboard_14.png\
            remotekeyboard_16.png\
            remotekeyboard_19.png\
            remotekeyboard_22.png\
            remotekeyboard_24.png\
            remotekeyboard_25.png\
            remotekeyboard_27.png\
            remotekeyboard_31.png\
            remotekeyboard_32.png\
            remotekeyboard_33.png\
            remotekeyboard_37.png\
            remotekeyboard_38.png\
            remotekeyboard_39.png\
            remotekeyboard_bg.png\
            remotekeyboard_remocon_bg.png\
            remocon.png\
            mouse.png\
            keyboard.png\
            scrollbar.png\
            wifikeyboard.png
